ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration10/input.ts.stderr
error[1093]: Type annotation cannot appear on a constructor declaration
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration10/input.ts:2:18
  |
2 |   constructor(): number { }
  |                  ^^^^^^

